2001-10-31 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Added zooming with scroll wheel on mouse.
	* README: Added info on how to configure XFree86 for scroll mouse.

	
2001-10-28 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: Fixed bug causing parser to reports
	  points with wrong aperture. Pointed out by Dan Christian.
	

2001-10-30 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c, src/gerber.h, src/gerber.c
	  Moved new_image() to the correct place

	
2001-10-28 Andreas Andersson (e92_aan@e.kth.se)

	* src/Makefile.am
	  Added drill.c to SOURCES since it seems to work well enough
	  for some testing.
	* src/drill.c
	  Added an input file format guessing function.
	  Some kludges to get around scaling problems.
	* src/gerbv.c
	  Separated File/Open command into File/Open Gerber... and
	  File/Open Drill... Added functions to open drill files.
	* src/*.c:
	  A few speling errors fixed.

	
2001-10-28 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c, src/gerber.h, src/gerber.c, src/scm_gerber.c:
	  aperture array is now full size and array index is very
	  simple.
	

2001-10-27 Stefan Petersen (spe@stacken.kth.se)

	* src/*.[ch]: typedef:ed all internal structs to *_t
	

-- Release 0.0.4 --	
	
2001-10-27 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: EagleCad generates broken Gerber.
	  I kindly detect and then tries to run as nothing 
	  happened. Disable kludge with commenting out 
	  EAGLECAD_KLUDGE in src/gerber.h.
	  This was pointed out to me by Dan Christian and
	  later confirmed by Fredrik Jonsson sent me some
	  examples. Thanks guys!
	* AUTHORS/CONTRIBUTORS: Added latest bunch of contributing
	  people.
	* configure.in: Updated version to 0.0.4 before release.
	
	
2001-10-24 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.[hc]: Added. Extracted drawing functions from
	  gerbv.c.
	* src/gerbv.c: Removed add drawing functions into draw.c.
	  Also minor clean ups. Fixed #def's of Guile support.